--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -18,5 +18,5 @@
     <string name="prompt_password_register">Password</string>
     <string name="prompt_firstname">Firstname</string>
     <string name="prompt_lastname">Lastname</string>
-    <string name="action_register">register</string>
+    <string name="action_register">Register</string>
 </resources>
