wip create shopping list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="action_add_list">Add a shopping list</string>
     <string name="prompt_no_lists">There isn\'t any shopping list yet.</string>
     <string name="action_create_list">Create list</string>
+    <string name="prompt_shopping_list_name">Shopping list name</string>
 </resources>
